retrieveUnpackaged/objects/copado__Git_Org_Commit__c.object
<CustomObject>
    <description>This object stores the individual commits to a Git repository executed by Copado Deployer.</description>
    <fields>
        <fullName>copado__Changes__c</fullName>
        <label>Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Commit_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Commit Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Commit_Message__c</fullName>
        <label>Commit Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Git_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Backup</label>
        <referenceTo>copado__Git_Backup__c</referenceTo>
        <relationshipLabel>Git Org Commits</relationshipLabel>
        <relationshipName>Git_Org_Commits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Org__c</fullName>
        <label>Org</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Git Org Commits</relationshipLabel>
        <relationshipName>Git_Org_Commits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Git Org Commit</label>
    <nameField>
        <displayFormat>Cmt-{0000}</displayFormat>
        <label>Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Git Org Commits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>